--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.22.0",
     "npm-run-all2": "^6.1.2",
+    "postcss-html": "^1.6.0",
     "postcss-scss": "^4.0.9",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
