--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.22.0",
     "npm-run-all2": "^6.1.2",
@@ -51,5 +52,12 @@
     "vite": "^5.1.4",
     "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^1.8.27"
+  },
+  "engines": {
+    "node": ">=18.19.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:DevilTears/turnip-price-calculator.git"
   }
 }
