feat: 基础页面样式

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "Pinia",
     "smacss",
     "stylelint",
-    "unplugin"
+    "unplugin",
+    "VITE"
   ],
   // eslint配置
   "javascript.validate.enable": false,
